<resources>
    <string name="app_name">WS HELP RIDER</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Winner Software</string>
    <string name="nav_header_subtitle">winnersoft.co.in</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="dashboard">Dashboard</string>
    <string name="admin">Admin</string>
    <string name="volunteers">Volunteers</string>
    <string name="users">Users</string>
    <string name="grievances">Grievances</string>
    <string name="admins">Admins</string>
    <string name="addComplaint">Add Grievance</string>
    <string name="myComplaint">My Grievances</string>
    <string name="citizenRegistered">Citizen Registered</string>
    <string name="grievanceReceived">Grievances Received</string>
    <string name="grievanceResolved">Grievances Resolved</string>
    <string name="checkComplaintStatus">Check Grievance Status</string>
    <string name="rrgisterYourComplaint">Register Your Grievance</string>
    <string name="socialMedia">Social Media</string>
    <string name="feedback">Feedback</string>
    <string name="Username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="userName">Username</string>
    <string name="grievancesManagement">Grievances Management</string>
    <string name="thisFieldCannotBlank">This field cannot be blank</string>
    <string name="logout">Logout</string>
    <string name="logoutQue">Logout ?</string>
    <string name="doYouWantLogout">Do you want to logout ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="newComplaint">New Grievance</string>
    <string name="profile">Profile</string>
    <string name="token">Token</string>
    <string name="complaintDepartment">Grievance Department</string>
    <string name="complaintType">Grievance Type</string>
    <string name="date">Date</string>
    <string name="totalComplaints">Total Grievances</string>
    <string name="openComplaints">Open</string>
    <string name="inProgressComplaints">In Progress</string>
    <string name="resolvedComplaints">Resolved</string>
    <string name="closedComplaints">Closed</string>
    <string name="citizenRegistration">Citizen Registration</string>
    <string name="middleName">Middle Name</string>
    <string name="lastName">Last Name</string>
    <string name="firstName">First Name</string>
    <string name="cancel">Cancel</string>
    <string name="email">Email Id</string>
    <string name="houseNo">House No</string>
    <string name="building">Building</string>
    <string name="street">Street</string>
    <string name="area">Area</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="landline">Landline</string>
    <string name="register">Register</string>
    <string name="citizen">Citizen</string>
    <string name="subject">Subject</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="uploadDocument">Upload Document</string>
    <string name="save">Save</string>
    <string name="addComplaints">Add Grievance</string>
    <string name="name">Name</string>
    <string name="mobNo">Mobile Number</string>
    <string name="newRegiQue">New Registration ?</string>
    <string name="registerNewAdmin">Register New Admin</string>
    <string name="loading">Loading...Please Wait</string>
    <string name="noInternetConnection">No Internet Connection</string>
    <string name="plsConnectToInternet">Please Connect To Internet</string>
    <string name="ok">Ok</string>
    <string name="serverError">Server Error Please try again</string>
    <string name="tokenExpire">Token Expire</string>
    <string name="failedTryAgain">Failed try again.</string>
    <string name="registeredSuccess">Registered Successfully</string>
    <string name="profileUpdatePleaseLogin">Profile Update, Please login again</string>
    <string name="enterFirstName">Enter first name</string>
    <string name="enterMiddleName">Enter middle name</string>
    <string name="enterLastName">Enter last name</string>
    <string name="enterRole">Enter role</string>
    <string name="enterGender">Enter gender</string>
    <string name="enterCity">Enter city</string>
    <string name="enterPincode">Enter pincode</string>
    <string name="enterState">Enter state</string>
    <string name="enterCountry">Enter country</string>
    <string name="plsEnterValidBirthdate">Enter valid birth date</string>
    <string name="plsEnterFirstName">Please enter first name</string>
    <string name="plsEnterMiddleName">Please enter middle name</string>
    <string name="plsEnterLastName">Please enter last name</string>
    <string name="plsEnterMobNo">Please enter mobile number</string>
    <string name="plsEnterEmail">Please enter email id</string>
    <string name="plsEnterBirthdate">Please enter birth date</string>
    <string name="plsEnterAddress">Please enter address</string>
    <string name="plsEnterCity">Please enter city</string>
    <string name="plsEnterPincode">Please enter valid pincode</string>
    <string name="plsEnterState">Please enter state</string>
    <string name="plsEnterCountry">Please enter country</string>
    <string name="plsEnterstudName">Please enter student name</string>
    <string name="birthDate">Birth date</string>
    <string name="selGender">Select Gender :</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="emailId">Email Id</string>
    <string name="pincode">Pincode</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="update">Update</string>
    <string name="enterEmailId">Enter Email Id</string>
    <string name="enterMobNo">Enter Mobile Number</string>
    <string name="setCurrentAddress">Set Current Address</string>
    <string name="address">Address</string>
    <string name="plsEnterGender">Please Select Gender</string>
    <string name="validMailid">Please Enter Valid Email ID</string>
    <string name="incorrectUsernamePassword">Incorrect Username or Password</string>
    <string name="plsEnterCorrectUsernamePassword">Please enter correct Username And Password</string>
    <string name="loginSuccessful">Login success</string>
    <string name="registerNewVolunteer">Register new Volunteer</string>
    <string name="registerNewUser">Register new User</string>
    <string name="notFound">Not Found</string>
    <string name="complaintsNotFound">Grievances Not Found</string>
    <string name="title">Title</string>
    <string name="tokenNo">Token No.</string>
    <string name="status">Status</string>
    <string name="changeLanguage">Change Language</string>
    <string name="changePassword">Change Password</string>
    <string name="about">About</string>
    <string name="sendMail">Send Mail</string>
    <string name="langChange">Language Changed</string>
    <string name="enterCurrentPswd">Enter Current Password</string>
    <string name="enterNewPswd">Enter New Password</string>
    <string name="enterConfirmNewPswd">Confirm Password</string>
    <string name="incorrectPassword">Incorrect Password</string>
    <string name="passwordDoesnMatched">Password not match</string>
    <string name="passwordChangedSuccessPlsLogin">Password changed successfully, Please login again</string>
    <string name="passDoesnMatch">Incorrect Password</string>
    <string name="currentPassNewPassNotMatch">Current password is incorrect, Please enter correct password</string>
    <string name="rateUsOnPlayStore">Rate us on Play Store.</string>
    <string name="enterArea">Area</string>
    <string name="selDistrict">Select District</string>
    <string name="selState">Select State</string>
    <string name="india">India</string>
    <string name="stringValidation"> . abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZक	का	कि	की	कु	कू	के	कै	को	कौ	कं	कः
    ख	खा	खि	खी	खु	खू	खे	खै	खो	खौ	खं	खः
    ग	गा	गि	गी	गु	गू	गे	गै	गो	गौ	गं	गः
    घ	घा	घि	घी	घु	घू	घे	घै	घो	घौ	घं	घः
    च	चा	चि	ची	चु	चू	चे	चै	चो	चौ	चं	चः
    छ	छा	छि	छी	छु	छू	छे	छै	छो	छौ	छं	छः
    ज	जा	जि	जी	जु	जू	जे	जै	जो	जौ	जं	जः
    झ	झा	झि	झी	झु	झू	झे	झै	झो	झौ	झं	झः
    ट	टा	टि	टी	टु	टू	टे	टै	टो	टौ	टं	टः
    ठ	ठा	ठि	ठी	ठु	ठू	ठे	ठै	ठो	ठौ	ठं	ठः
    ड	डा	डि	डी	डु	डू	डे	डै	डो	डौ	डं	डः
    ढ	ढा	ढि	ढी	ढु	ढू	ढे	ढै	ढो	ढौ	ढं	ढः
    ण	णा	णि	णी	णु	णू	णे	णै	णो	णौ	णं	णः
    त	ता	ति	ती	तु	तू	ते	तै	तो	तौ	तं	तः
    थ	था	थि	थी	थु	थू	थे	थै	थो	थौ	थं	थः
    द	दा	दि	दी	दु	दू	दे	दै	दो	दौ	दं	दः
    ध	धा	धि	धी	धु	धू	धे	धै	धो	धौ	धं	धः
    न	ना	नि	नी	नु	नू	ने	नै	नो	नौ	नं	नः
    प	पा	पि	पी	पु	पू	पे	पै	पो	पौ	पं	पः
    फ	फा	फि	फी	फु	फू	फे	फै	फो	फौ	फं	फः
    ब	बा	बि	बी	बु	बू	बे	बै	बो	बौ	बं	बः
    भ	भा	भि	भी	भु	भू	भे	भै	भो	भौ	भं	भः
    म	मा	मि	मी	मु	मू	मे	मै	मो	मौ	मं	मः
    य	या	यि	यी	यु	यू	ये	यै	यो	यौ	यं	यः
    र	रा	रि	री	रु	रू	रे	रै	रो	रौ	रं	रः
    ल	ला	लि	ली	लु	लू	ले	लै	लो	लौ	लं	लः
    ळ	ळा	ळि	ळी	ळु	ळू	ळे	ळै	ळो	ळौ	ळं	ळः
    व	वा	वि	वी	वु	वू	वे	वै	वो	वौ	वं	वः
    श	शा	शि	शी	शु	शू	शे	शै	शो	शौ	शं	शः
    ष	षा	षि	षी	षु	षू	षे	षै	षो	षौ	षं	षः
    स	सा	सि	सी	सु	सू	से	सै	सो	सौ	सं	सः
    ह	हा	हि	ही	हु	हू	हे	है	हो	हौ	हं	हः
    क्ष	क्षा	क्षि	क्षी	क्षु	क्षू	क्षे	क्षै	क्षो	क्षौ	क्षं	क्षः
    त्र	त्रा	त्रि	त्री	त्रु	त्रू	त्रे	त्रै	त्रो	त्रौ	त्रं	त्रः
    ज्ञ	ज्ञा	ज्ञि	ज्ञी	ज्ञु	ज्ञू	ज्ञे	ज्ञै	ज्ञो	ज्ञौ	ज्ञं	ज्ञः
    श्र	श्रा	श्रि	श्री	श्रु	श्रू	श्रे	श्रै	श्रो	श्रौ	श्रं	श्रःअ	आ	इ	ई	उ	ऊ	ए	ऐ	ओ	औ	अं	अः
    -	ा	ि	ी	ु	ू	े	ै	ो	ौ	ं	ः</string>
    <string name="areaValidation">/_-0123456789 . abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZक	का	कि	की	कु	कू	के	कै	को	कौ	कं	कः
    ख	खा	खि	खी	खु	खू	खे	खै	खो	खौ	खं	खः
    ग	गा	गि	गी	गु	गू	गे	गै	गो	गौ	गं	गः
    घ	घा	घि	घी	घु	घू	घे	घै	घो	घौ	घं	घः
    च	चा	चि	ची	चु	चू	चे	चै	चो	चौ	चं	चः
    छ	छा	छि	छी	छु	छू	छे	छै	छो	छौ	छं	छः
    ज	जा	जि	जी	जु	जू	जे	जै	जो	जौ	जं	जः
    झ	झा	झि	झी	झु	झू	झे	झै	झो	झौ	झं	झः
    ट	टा	टि	टी	टु	टू	टे	टै	टो	टौ	टं	टः
    ठ	ठा	ठि	ठी	ठु	ठू	ठे	ठै	ठो	ठौ	ठं	ठः
    ड	डा	डि	डी	डु	डू	डे	डै	डो	डौ	डं	डः
    ढ	ढा	ढि	ढी	ढु	ढू	ढे	ढै	ढो	ढौ	ढं	ढः
    ण	णा	णि	णी	णु	णू	णे	णै	णो	णौ	णं	णः
    त	ता	ति	ती	तु	तू	ते	तै	तो	तौ	तं	तः
    थ	था	थि	थी	थु	थू	थे	थै	थो	थौ	थं	थः
    द	दा	दि	दी	दु	दू	दे	दै	दो	दौ	दं	दः
    ध	धा	धि	धी	धु	धू	धे	धै	धो	धौ	धं	धः
    न	ना	नि	नी	नु	नू	ने	नै	नो	नौ	नं	नः
    प	पा	पि	पी	पु	पू	पे	पै	पो	पौ	पं	पः
    फ	फा	फि	फी	फु	फू	फे	फै	फो	फौ	फं	फः
    ब	बा	बि	बी	बु	बू	बे	बै	बो	बौ	बं	बः
    भ	भा	भि	भी	भु	भू	भे	भै	भो	भौ	भं	भः
    म	मा	मि	मी	मु	मू	मे	मै	मो	मौ	मं	मः
    य	या	यि	यी	यु	यू	ये	यै	यो	यौ	यं	यः
    र	रा	रि	री	रु	रू	रे	रै	रो	रौ	रं	रः
    ल	ला	लि	ली	लु	लू	ले	लै	लो	लौ	लं	लः
    ळ	ळा	ळि	ळी	ळु	ळू	ळे	ळै	ळो	ळौ	ळं	ळः
    व	वा	वि	वी	वु	वू	वे	वै	वो	वौ	वं	वः
    श	शा	शि	शी	शु	शू	शे	शै	शो	शौ	शं	शः
    ष	षा	षि	षी	षु	षू	षे	षै	षो	षौ	षं	षः
    स	सा	सि	सी	सु	सू	से	सै	सो	सौ	सं	सः
    ह	हा	हि	ही	हु	हू	हे	है	हो	हौ	हं	हः
    क्ष	क्षा	क्षि	क्षी	क्षु	क्षू	क्षे	क्षै	क्षो	क्षौ	क्षं	क्षः
    त्र	त्रा	त्रि	त्री	त्रु	त्रू	त्रे	त्रै	त्रो	त्रौ	त्रं	त्रः
    ज्ञ	ज्ञा	ज्ञि	ज्ञी	ज्ञु	ज्ञू	ज्ञे	ज्ञै	ज्ञो	ज्ञौ	ज्ञं	ज्ञः
    श्र	श्रा	श्रि	श्री	श्रु	श्रू	श्रे	श्रै	श्रो	श्रौ	श्रं	श्रःअ	आ	इ	ई	उ	ऊ	ए	ऐ	ओ	औ	अं	अः
    -	ा	ि	ी	ु	ू	े	ै	ो	ौ	ं	ः</string>
    <string name="updateNow">Update Now</string>
    <string name="whatsnew">What\'s New :</string>
    <string name="newUpdateMessage">1.Bug fixes and performance enhancement,"\n\n"2.Supports Marathi Language,"\n\n"3.UI Changes,"\n\n"4.Search improvements.</string>
</resources>